<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="RobotCustomPattern" Id="{fcd1fbe7-c892-4392-9af5-2d5eec7f4aa5}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK RobotCustomPattern
VAR_INPUT
	ENI				: BOOL;
	CycleAtLayer	: UINT;
	dtRecipe		: stProductinfo;
END_VAR
VAR_OUTPUT
	ENO				: BOOL;
	Offset_X		: UINT;
	Offset_Y		: UINT;
	Offset_Z		: UINT;
END_VAR

VAR
	
END_VAR

]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF ENI THEN
	ENO:=TRUE;
	
	
	IF CycleAtLayer <> 0 THEN
		Offset_X := INT_TO_UINT(dtRecipe.OffsetPattern.Offset_X[CycleAtLayer]);
		Offset_Y := INT_TO_UINT(dtRecipe.OffsetPattern.Offset_Y[CycleAtLayer]);
		Offset_Z := INT_TO_UINT(dtRecipe.OffsetPattern.Offset_Z[CycleAtLayer]);
	END_IF
	
	
	
END_IF;]]></ST>
    </Implementation>
    <LineIds Name="RobotCustomPattern">
      <LineId Id="626" Count="2" />
      <LineId Id="633" Count="1" />
      <LineId Id="670" Count="1" />
      <LineId Id="668" Count="1" />
      <LineId Id="648" Count="0" />
      <LineId Id="640" Count="1" />
      <LineId Id="352" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>